--- a/styles/sections/Resume.module.css
+++ b/styles/sections/Resume.module.css
@@ -14,7 +14,7 @@
 
   padding: 24px;
   padding-top: 70px;
-    padding-bottom: 0px;
+  padding-bottom: 0px;
 
   max-width: 1248px;
 
@@ -77,6 +77,41 @@
 .Overview h3 > a {
   text-decoration: none;
   color: rgb(var(--green));
+  position: relative;
+}
+
+.Overview h3 > a::before {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 1.5px;
+  bottom: -4px;
+  left: 0;
+  background-color: #000;
+  transform: scaleX(0);
+  transition: transform 0.3s ease;
+}
+
+.Overview h3 > a::before {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 1.5px;
+  bottom: -4px;
+  left: 0;
+  background-color: #47cca0;
+  transform: scaleX(0);
+  transition: transform 0.3s ease;
+}
+
+.Overview h3 > a::before {
+  transform: scaleX(0);
+}
+
+.Overview h3 > a:hover::before {
+  transform: scaleX(1);
 }
 
 .Overview p {
@@ -103,9 +138,12 @@
 }
 
 .Contact {
-  height: 35px;
+  height: 12vw;
   width: 100%;
-  max-width: 20rem;
+  
+  max-width: 250px;
+  max-height: 40px;
+
   background: rgb(var(--white));
 
   margin: 1rem 0px;
@@ -125,7 +163,7 @@
   font-feature-settings: "clig" off, "liga" off;
   font-family: "Karla", sans-serif;
 
-  font-size: 1.125rem;
+  font-size: 100%;
   font-style: normal;
   font-weight: 500;
   line-height: 1.3125rem;
@@ -133,21 +171,19 @@
   position: relative;
 
   transition: ease 0.3s;
-
 }
 
 .Contact:hover {
-    bottom: 3px;
-    left: 3px;
-    box-shadow: -3px 3px 0px white;
-    transition: ease 0.3s;
-    font-weight: bold;
-  
-  }
+  bottom: 3px;
+  left: 3px;
+  box-shadow: -3px 3px 0px white;
+  transition: ease 0.5s;
+  font-weight: bold;
+}
 
 .Contact svg {
-  margin-right: 0.75rem;
-  font-size: 1.75rem;
+  margin-right: 2vw;
+  font-size: 175%;
 }
 
 .Mail:hover {
@@ -182,26 +218,162 @@
   background: #5661f5;
 }
 
-
 .GithubLink {
-    color: #868686;
-    width: 100%;
-    word-wrap:normal;
+  color: #868686;
+  width: 100%;
+  word-wrap: normal;
+  height: fit-content;
 
-    padding: 0.5em 24px 0.5em 24px;
-    box-sizing: border-box;    
+  padding: 0.5em 24px 0.5em 24px;
+  box-sizing: border-box;
 
-    text-align: center;
-    text-shadow: 0px 0px 19px 0px rgba(0, 0, 0, 0.25);
-    font-family: JetBrains Mono;
-    font-size: 1rem;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 223.885%; /* 1.25938rem */
-    letter-spacing: 0.05625rem;   
+  text-align: center;
+  text-shadow: 0px 0px 19px 0px rgba(0, 0, 0, 0.25);
+  font-family: JetBrains Mono;
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 223.885%; /* 1.25938rem */
+  letter-spacing: 0.05625rem;
 }
 
 .GithubLink a {
-    color: rgb(var(--green));
-    text-decoration: none;
+  color: rgb(var(--green));
+  text-decoration: none;
+}
+
+.Pattern {
+  width: 10vw;
+  height: 10vw;
+
+  position: absolute;
+
+  z-index: -1;
+
+  background-color: transparent;
+  opacity: 1;
+  background-image: radial-gradient(
+    rgb(var(--white)) 0.75px,
+    rgba(var(--saphire-blue), 0) 0.65px
+  );
+  background-size: 12px 12px;
+}
+
+.Pattern:last-child {
+  bottom: 0px;
+  right: 0px;
+  z-index: 2;
+}
+
+@media screen and (min-width: 751px) {
+  .Resume {
+    min-height: 100%;
+    width: 100%;
+  }
+
+  .Resume section {
+    padding: 80px 24px 0px 70px;
+  }
+
+  .Content {
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+    height: 100%;
+  }
+
+  .ResumeContent {
+    display: block;
+    width: 45vw;
+    height: 70vh;
+    max-height: 750px;
+    max-width: 500px;
+
+    position: relative;
+  }
+
+  .ResumeEmbed,
+  .Box {
+    display: block;
+    width: 85%;
+    height: 90%;
+    border-radius: 5px;
+
+    position: absolute;
+    top: 1.5rem;
+    left: 2.5rem;
+    z-index: 1;
+  }
+
+  .ResumeEmbed {
+    transition: ease 0.4s;
+  }
+
+  .ResumeEmbed:hover {
+    top: 1rem;
+    left: 2rem;
+    cursor: pointer;
+    box-shadow: 10px 15px 0px white;
+  }
+
+  .Box {
+    outline: 1px solid rgb(var(--white));
+    position: absolute;
+    top: 3rem;
+    left: 3rem;
+    z-index: 0;
+  }
+
+  .Pattern {
+    max-height: 140px;
+    max-width: 140px;
+    z-index: -1;
+  }
+
+  .Overview {
+    width: calc(100% - 45vw);
+    padding-left: 1rem;
+    height: auto;
+    box-sizing: border-box;
+  }
+
+  .ContactList {
+    align-items: flex-start;
+  }
+
+  .Contact {
+    max-width: 320px;
+    max-height: 40px;
+    font-size: 1.25rem;
+    margin: 0rem;
+    margin-bottom: 1.25rem;
+  }
+
+  .Contact svg {
+    font-size: 1.4rem;
+  }
+
+  .GithubLink {
+    margin-top: 0px;
+  }
+}
+
+@media screen and (min-width: 1300px) {
+  .Content {
+    max-width: 1248px;
+  }
+
+  .Resume section {
+    padding: 80px 24px 0px 24px;
+  }
+
+  .Overview {
+    width: 50%;
+  }
+}
+
+@media screen and (max-height: 600px) {
+  .Resume {
+    min-height: fit-content;
+  }
 }
