--- a/styles/sections/Welcome.module.css
+++ b/styles/sections/Welcome.module.css
@@ -39,14 +39,14 @@
 }
 
 .Overview p {
-  font-size: 1.75rem;
+  font-size: 1.5rem;
   font-weight: 400;
   line-height: 110%;
   margin: 0.25rem 0px;
 }
 
 .Overview h1 {
-  font-size: 3rem;
+  font-size: 2.5rem;
   font-weight: 700;
   line-height: 125%;
   margin: 0.25rem 0px;
@@ -56,15 +56,18 @@
   font-size: 1.75rem;
   font-weight: 700;
   line-height: 139.286%;
-  margin: 0.25em 0px;
+  margin: 0.25rem 0px;
+  margin-bottom: 0.5rem;
 }
 
 .Overview .Description {
   font-family: "JetBrains Mono", monospace;
-  font-size: 1.25rem;
+  font-size: 1.15rem;
   font-style: normal;
   font-weight: 400;
   line-height: 165%;
+  margin-bottom: 1rem;
+
 }
 
 .ContactInfo {
@@ -74,7 +77,7 @@
 
 .ContactInfo p {
   font-family: "JetBrains Mono", monospace;
-  font-size: 1.4rem;
+  font-size: 1.2rem;
   font-style: normal;
   font-weight: 400;
   line-height: 165%;
@@ -174,7 +177,7 @@
   left: 0vw;
 
   background-color: rgba(255, 240, 229, 1);
-  opacity: 0.8;
+  opacity: 1;
   background: repeating-linear-gradient(
     45deg,
     #000000,
