--- a/styles/sections/Project.module.css
+++ b/styles/sections/Project.module.css
@@ -1,9 +1,73 @@
 .Projects {
-    background: rgb(var(--beige));
-    /* max-height: 895px; */
-    height: 99%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  background: rgb(var(--beige));
+  height: fit-content;
+  display: flex;
+  flex-direction: column;  
+}
+
+.Projects section {
+  width: 100%;
+  min-height: 100%;
+  height: fit-content;
+
+  padding: 24px;
+  padding-top: 50px;
+
+  max-width: 1248px;
+
+  box-sizing: border-box;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+  box-sizing: border-box;
+}
+
+.SectionTitle {
+  width: 100%;
+  height: fit-content;
+
+  font-family: "Karla", sans-serif;
+  color: rgb(var(--black));
+  font-feature-settings: "clig" off, "liga" off;
+  font-style: normal;
+  text-align: right;
+
+  font-size: 3rem;
+  font-weight: 700;
+  line-height: 125%;
+
+  margin: 0.25rem 0px;
+  padding-bottom: 1rem;
+  margin-bottom: 1.5rem;
+
+  border-bottom: 2px solid rgb(var(--black));
+}
+
+.SectionSubTitle {
+  font-family: "Karla", sans-serif;
+  font-size: 1.625rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 2.4375rem;
+}
+
+.FeaturedProjectList {
+  width: 100%;
+  height: fit-content;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.OtherProjectList {
+  display: grid;
+  grid-template-rows: auto auto auto;
+  grid-auto-flow: column;
+  overflow-x: scroll;
+  grid-gap: 1rem;
+
+  padding: 5px;
 }
