--- a/styles/sections/Project.module.css
+++ b/styles/sections/Project.module.css
@@ -60,21 +60,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 1rem;
 }
 
-.OtherProjectList {
-  display: grid;
-  grid-template-rows: auto auto auto auto auto;
-  grid-auto-flow: column;
-  overflow-x: scroll;
-
-  grid-gap: 1rem;
-
-  padding: 5px;
-
-  overflow-x: scroll;
-
-}
 
 @media screen and (min-width: 751px) {
   .Projects {
@@ -100,12 +88,13 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: space-between;
   }
 
   .OtherProjectList {
     display: flex;
     flex-wrap: wrap;
-    column-gap: 1rem;
+    column-gap: 2rem;
   }
 }
 
