--- a/styles/components/FeaturedProject.module.css
+++ b/styles/components/FeaturedProject.module.css
@@ -14,6 +14,17 @@
 
   font-family: "Karla", sans-serif;
   box-sizing: border-box;
+
+  position: relative;
+  cursor: pointer;
+  transition: ease 0.5s;
+
+}
+
+.FeaturedProject:hover {
+  bottom: 5px;
+  left: 10px;
+  box-shadow: -5px 5px 0px black;
 }
 
 .Header {
@@ -124,4 +135,13 @@
   .FeaturedProject {
     width: 49%;
   }
+
+  .Header {
+    opacity: 1;
+    background-image: radial-gradient(#000000 0.55px, #eafdc6 0.55px);
+    background-size: 13px 13px;
+    padding: 0rem 1rem;
+  }
+  
 }
+
