--- a/styles/components/FeaturedProject.module.css
+++ b/styles/components/FeaturedProject.module.css
@@ -18,6 +18,7 @@
   position: relative;
   cursor: pointer;
   transition: ease 0.5s;
+  overflow: hidden;
 
 }
 
@@ -141,6 +142,10 @@
     background-image: radial-gradient(#000000 0.55px, #eafdc6 0.55px);
     background-size: 13px 13px;
     padding: 0rem 1rem;
+  }
+
+  .Description {
+    -webkit-line-clamp: 5;
   }
   
 }
