--- a/styles/sections/Project.module.css
+++ b/styles/sections/Project.module.css
@@ -63,6 +63,19 @@
   gap: 1rem;
 }
 
+.OtherProjectList {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(2, 1fr); 
+  gap: 1rem; 
+  overflow-x: auto; 
+  width: 100%; 
+  height: 35rem;
+  white-space: nowrap; 
+
+  padding: 0.25rem;
+}
+
 
 @media screen and (min-width: 751px) {
   .Projects {
@@ -93,11 +106,22 @@
 
   .OtherProjectList {
     display: flex;
+    flex-direction: row;
+    justify-content: space-between;
     flex-wrap: wrap;
-    column-gap: 2rem;
+    column-gap:1rem;
+    overflow-y: scroll;
+    width: 100%;
+    height: 45rem;
   }
 }
 
+@media screen and (min-width: 1300px) {
+  .OtherProjectList {
+    width: 1200px;
+  }  
+
+}
 @media screen and (min-width: 1300px) {
   .Projects section {
     padding: 80px 24px 0px 24px;
