--- a/styles/pages/Archive.module.css
+++ b/styles/pages/Archive.module.css
@@ -1,11 +1,11 @@
 .Archive {
-    background: rgb(var(--beige));
-    height: fit-content;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;  
-    height: 100%;
+  background: rgb(var(--beige));
+  height: fit-content;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
 }
 
 .Archive .ProjectList {
@@ -32,7 +32,6 @@ header.Header {
   width: 100%;
 }
 
-
 .Header h1 {
   font-size: 2.75rem;
   font-weight: 700;
@@ -40,7 +39,6 @@ header.Header {
   margin: 0.25rem 0px;
   margin-bottom: 1rem;
   font-family: "Karla", sans-serif;
-
 }
 
 .Header h2 {
@@ -52,10 +50,123 @@ header.Header {
   font-family: "JetBrains Mono", monospace;
 }
 
+.Archive table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 2rem;
+  font-family: "JetBrains Mono", monospace;
+  table-layout: auto;
+}
 
+.Archive th,
+.Archive td {
+  padding: 0.75rem;
+  border-bottom: 1px solid rgba(var(--black), 0.1);
+  text-align: left;
+}
+
+.Archive th {
+  font-weight: 600;
+  color: rgba(var(--black), 0.8);
+  font-family: "JetBrains Mono", monospace;
+}
+
+.Archive td a {
+  color: rgba(var(--saphire-blue), 1);
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+}
+
+.Archive td a:hover {
+  text-decoration: underline;
+}
+
+.Archive .BsGithub {
+  margin-left: 0.5rem;
+  color: rgba(var(--black), 0.8);
+  transition: color 0.3s;
+}
+
+.Archive .BsGithub:hover {
+  color: rgba(var(--green), 1);
+}
+
+.Month {
+  display: none;
+}
+
+.TableName {
+  min-width: 40%;
+}
+
+.ProjectName {
+  font-weight: 700;
+}
+
+.TableTechnologies {
+  width: 30%;
+  display: none;
+}
+
+.TechList {
+  display: none;
+}
+
+.TechList div {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  gap: 4%;
+}
+
+.TechList div p {
+  width: fit-content;
+}
+
+.GitHubLink a {
+  font-size: 1.5rem;
+  transition: ease 0.3s;
+}
+
+.GitHubLink a:hover {
+  font-size: 1.75rem;
+}
+
+@media screen and (min-width: 550px) {
+  .TechList {
+    display: block;
+  }
+
+  .TableTechnologies {
+    display: table-cell;
+  }
+}
 @media screen and (min-width: 751px) {
   .Archive .ProjectList {
     padding: 80px 24px 24px 70px;
+  }
+
+  .Header h1 {
+    margin-top: 5rem;
+    margin-bottom: 2rem;
+  }
+
+  
+  .TechList {
+    display: block;
+  }
+
+  .TableTechnologies {
+    display: table-cell;
+  }
+
+  .Archive table {
+    font-size: 1.15rem;
+  }
+
+  .Month {
+    display: inline;
   }
 }
 
