--- a/styles/sections/Project.module.css
+++ b/styles/sections/Project.module.css
@@ -61,12 +61,11 @@
   font-feature-settings: "clig" off, "liga" off;
 
   font-family: 'JetBrains Mono', monospace;
-  font-size: 1.5rem;
+  font-size: 1.25rem;
   font-style: normal;
   font-weight: 400;
-  line-height: 2rem; /* 150% */
+  line-height: 2rem;
 
-  margin-bottom: 1rem;
   text-decoration: none;
 }
 
@@ -122,16 +121,26 @@
     justify-content: space-between;
   }
 
+  .ProjectsWarning {
+    font-family: 'JetBrains Mono', monospace;
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 2rem;
+  }
+
   .OtherProjectList {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    flex-wrap: wrap;
-    column-gap: 2rem;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-column-gap: auto;
+    grid-row-gap: 2rem;
+
     overflow: visible;
     width: 100%;
     height: 45rem;
   }
+
 }
 
 @media screen and (min-width: 1300px) {
