--- a/styles/pages/Archive.module.css
+++ b/styles/pages/Archive.module.css
@@ -3,10 +3,15 @@
   height: fit-content;
   min-height: 100%;
   overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
 }
 
 .Archive .ProjectList {
   width: 100%;
+  max-width: 1200px;
   min-height: 100%;
   height: fit-content;
 
@@ -37,12 +42,13 @@ header.Header {
   font-weight: 700;
   line-height: 125%;
   margin: 0.25rem 0px;
+  margin-top: 4rem;
   margin-bottom: 1rem;
   font-family: "Karla", sans-serif;
 }
 
 .Header h2 {
-  font-size: 1.25rem;
+  font-size: 1.35rem;
   font-weight: 600;
   line-height: 139.286%;
   margin: 0.5rem 0px;
@@ -52,29 +58,102 @@ header.Header {
 
 .ProjectsWarning {
   font-family: "JetBrains Mono", monospace;
-  font-size: 1rem;
+  font-size: 1.15rem;
   font-style: normal;
   font-weight: 400;
   line-height: 2rem;
 }
 
-.GithubLink {
-  color: #868686;
+.ProjectsContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
   width: 100%;
-  word-wrap: normal;
   height: fit-content;
+}
 
-  padding: 0.5em 24px 0.5em 24px;
-  box-sizing: border-box;
+.ProjectRow {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  font-family: "JetBrains Mono", monospace;
+  padding: 0.25em 0em;
+  font-size: 1.15rem;
+  font-weight: 400;
+  min-height: 2.75rem;
 
-  text-align: center;
-  text-shadow: 0px 0px 19px 0px rgba(0, 0, 0, 0.25);
-  font-family: JetBrains Mono;
-  font-size: 1rem;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 223.885%; /* 1.25938rem */
-  letter-spacing: 0.05625rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.75rem;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.10);
+}
+
+
+.ProjectRow:first-child {
+  font-weight: 600;
+  opacity: 70%;
+  font-size: 1.25rem;
+}
+
+.Date {
+  width: 25%;
+}
+
+.Month {
+  display: none;
+}
+
+.Name {
+  width: 55%;
+}
+
+
+.TechList {
+  width: 50%;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  column-gap: 0.65rem;
+  flex-wrap: wrap;
+
+  display: none;
+}
+
+
+.Tech {
+  height: fit-content;
+  width: fit-content;
+}
+
+.Links {
+  width: 20%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.Links a {
+  text-decoration: none;
+  color: black;
+  transition: ease 0.35s;
+  height: 1.5rem;
+  width: 1.5rem;
+  border-radius: 50%;
+  font-size: 1.5rem;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.Links a:hover {
+  padding: 0.45rem;
+  background-color: black;
+  color: white;
+
 }
 
 .GithubLink a {
@@ -82,11 +161,12 @@ header.Header {
   text-decoration: none;
 }
 
+
+
 @media screen and (min-width: 550px) {
   .TechList {
-    display: block;
+    display: flex;
   }
-
   .TableTechnologies {
     display: table-cell;
   }
@@ -99,26 +179,6 @@ header.Header {
   .Header h1 {
     margin-top: 5rem;
     margin-bottom: 2rem;
-  }
-
-  .TechList div {
-    width: 100%;
-    height: fit-content;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-  }
-
-  .TechList div p {
-    margin: 0px;
-  }
-
-  .TableTechnologies {
-    display: table-cell;
-  }
-
-  .Archive table {
-    font-size: 1.15rem;
   }
 
   .Month {
