--- a/styles/sections/Project.module.css
+++ b/styles/sections/Project.module.css
@@ -46,6 +46,14 @@
   border-bottom: 2px solid rgb(var(--black));
 }
 
+.ProjectsWarning {
+  font-family: 'JetBrains Mono', monospace;
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.25rem;
+}
+
 .SectionSubTitle {
   font-family: "Karla", sans-serif;
   font-size: 2rem;
@@ -80,20 +88,20 @@
 }
 
 .OtherProjectList {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(2, 1fr);
+  display: flex;
+  flex-direction: row;
   gap: 1rem;
-  overflow-x: auto;
+  height: 20rem;
   width: 100%;
-  height: 35rem;
-  white-space: nowrap;
+  height: fit-content;
   overflow-x: scroll;
-  padding: 0.25rem;
-  overflow-y: visible;
   padding: 1rem 1rem 0rem 0.25rem;
   box-sizing: border-box;
+  flex-wrap: nowrap;
+
+  margin-bottom: 3rem;
 }
+
 
 @media screen and (min-width: 751px) {
   .Projects {
@@ -121,15 +129,8 @@
     justify-content: space-between;
   }
 
-  .ProjectsWarning {
-    font-family: 'JetBrains Mono', monospace;
-    font-size: 1rem;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 2rem;
-  }
-
   .OtherProjectList {
+    padding: 1rem;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(2, 1fr);
@@ -138,7 +139,7 @@
 
     overflow: visible;
     width: 100%;
-    height: 45rem;
+    height: 50rem;
   }
 
 }
