--- a/styles/components/OtherProjects.module.css
+++ b/styles/components/OtherProjects.module.css
@@ -138,7 +138,8 @@
 
 @media screen and (min-width: 751px) {
   .OtherProject {
-    width: 20rem;
+    min-width: 30%;
+    max-width: 30%;
     height: 20rem;
   }
 
@@ -149,5 +150,13 @@
     overflow: hidden;
     word-break: break-all;
     white-space: normal;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .OtherProject {
+    min-width: 20rem;
+    max-width: 20rem;
+    height: 20rem;
   }
 }
