--- a/styles/pages/Archive.module.css
+++ b/styles/pages/Archive.module.css
@@ -155,12 +155,31 @@ header.Header {
   color: white;
 
 }
+.GithubLink {
+  position: absolute;
+  bottom: 0rem;
+  color: #868686;
+  width: 100%;
+  word-wrap: normal;
+  height: fit-content;
+
+  padding: 0.5em 24px 0.5em 24px;
+  box-sizing: border-box;
+
+  text-align: center;
+  text-shadow: 0px 0px 19px 0px rgba(0, 0, 0, 0.25);
+  font-family: JetBrains Mono;
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 223.885%; /* 1.25938rem */
+  letter-spacing: 0.05625rem;
+}
 
 .GithubLink a {
   color: rgb(var(--green));
   text-decoration: none;
 }
-
 
 
 @media screen and (min-width: 550px) {
