--- a/styles/components/FeaturedProject.module.css
+++ b/styles/components/FeaturedProject.module.css
@@ -102,13 +102,11 @@
 .Description {
   height: calc(100% - 2.5rem);
   width: 100%;
-  margin: 0px;
-  display: -webkit-box;
-  -webkit-line-clamp: 5;
-  -webkit-box-orient: vertical;
+  margin: 0;
+  word-wrap: break-word;
+  white-space: pre-wrap;
   overflow: hidden;
-  word-break: break-all;
-  white-space: normal;
+
 }
 
 .Footer {
