--- a/styles/components/OtherProjects.module.css
+++ b/styles/components/OtherProjects.module.css
@@ -103,14 +103,9 @@
 .Description {
   height: calc(100% - 2.5rem);
   width: 100%;
-  margin: 0px;
-  display: -webkit-box;
-  -webkit-line-clamp: 5;
-  -webkit-box-orient: vertical;
-  overflow: hidden;
-
-  text-overflow: ellipsis;
-  white-space: wrap;
+  margin: 0;
+  word-wrap: break-word;
+  white-space: pre-wrap;
   overflow: hidden;
 }
 
@@ -142,21 +137,12 @@
     max-width: 30%;
     height: 20rem;
   }
-
-  .Description {
-    display: -webkit-box;
-    -webkit-line-clamp: 1;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
-    word-break: break-all;
-    white-space: normal;
-  }
 }
 
 @media screen and (min-width: 1200px) {
   .OtherProject {
     min-width: 20rem;
     max-width: 20rem;
-    height: 20rem;
+    height: 22rem;
   }
 }
